--- a/secret.env
+++ b/secret.env
@@ -1,7 +1,5 @@
-DB_USERNAME = <The username you like to use to connect to your database.>
-DB_PASSWORD = <The password you like to use to connect to your daabase.>
-POSTGRES_USER = <Has to match DB_USERNAME!>
-POSTGRES_PASSWORD = <Has to match DB_PASSWORD!>
+POSTGRES_USER = <The username you like to use to connect to your database.>
+POSTGRES_PASSWORD = <The password you like to use to connect to your database.>
 MQTT_USERNAME = <The username which will be used to connect to mqtt>
 MQTT_PASSWORD = <The password which will be used to connect to mqtt>
 REST_USERNAME = <The Basic auth username to get data from REST>
